--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
+    "@aws-sdk/client-dynamodb": "^3.614.0",
     "aws-amplify": "^6.2.0",
     "next": "13.5.4",
     "react": "^18",
