--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
     "@aws-sdk/client-dynamodb": "^3.614.0",
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/s3-request-presigner": "^3.614.0",
+    "@hookform/resolvers": "^3.9.0",
     "aws-amplify": "^6.2.0",
+    "lucide-react": "^0.407.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
@@ -22,6 +29,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.2"
   }
 }
