--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "aws-amplify": "^6.2.0",
     "lucide-react": "^0.407.0",
-    "next": "13.5.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
