--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.2.7",
     "@aws-amplify/ui-react": "^6.1.13",
     "@aws-sdk/client-dynamodb": "^3.614.0",
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@hookform/resolvers": "^3.9.0",
-    "aws-amplify": "^6.2.0",
+    "aws-amplify": "^6.4.0",
     "lucide-react": "^0.407.0",
     "next": "^14.2.5",
     "react": "^18",
