--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.2.7",
     "@aws-amplify/ui-react": "^6.1.13",
+    "@aws-amplify/ui-react-storage": "^3.1.4",
     "@hookform/resolvers": "^3.9.0",
     "aws-amplify": "^6.4.0",
     "lucide-react": "^0.407.0",
